# OpenAD-lib

./: ADM1_Final_results.csv  LICENSE  README.md  create_structure.py  lstm_predictions.csv  pyproject.toml  requirements.txt  test_all_models.py  test_core_improvements.py  update_notebook_pip.py
OpenAD-lib/notebooks/: 03_MultitaskGP_Tutorial.ipynb
OpenAD-lib/src/openad_lib.egg-info/: PKG-INFO  top_level.txt
docs/: REFERENCES.md  architecture.md  development_plan.md  publication_diagrams.md
examples/: 01_adm1_simulation.py  02_am2_simulation.py  03_am2_calibration.py  04_lstm_prediction.py  05_mtgp_prediction.py  06_am2_mpc_control.py  07_am2_vfa_tracking.py  08_new_library_structure_demo.py  09_priority1_improvements_demo.py  10_plotting_system_demo.py  calibrate_am2_optuna.py  example_usage.py  test_am2_model.py
notebooks/: 01_ADM1_Model_Tutorial.ipynb  01_ADM1_Tutorial.ipynb  01_ADM1_Tutorial_Full.ipynb  01_ADM1_Tutorial_Updated.ipynb  02_AM2_Modelling.ipynb  02_AM2_Modelling_Full.ipynb  02_AM2_Modelling_Updated.ipynb  02_LSTM_Model_Tutorial.ipynb  03_LSTM_Prediction.ipynb  03_LSTM_Prediction_Full.ipynb  03_LSTM_Prediction_Updated.ipynb  04_AM2_Model_Tutorial.ipynb  04_MTGP_Prediction.ipynb  04_MTGP_Prediction_Full.ipynb  04_MTGP_Prediction_Updated.ipynb  05_AM2_Parameter_Estimation.ipynb  05_MPC_Control.ipynb  05_MPC_Control_Full.ipynb  05_MPC_Control_Updated.ipynb  06_AM2_MPC_Control.ipynb  test_run_method.py
src/openad_lib/: __init__.py  config.py
src/openad_lib.egg-info/: SOURCES.txt  requires.txt
src/openad_lib/control/: __init__.py  am2_mpc.py
src/openad_lib/data/: Biogas_Plant_Outputs.csv  __init__.py  datasets.py  loaders.py  sample_ADM1_influent_data.csv  sample_LSTM_timeseries.csv  sample_biogas_output.csv  validators.py
src/openad_lib/feedstock/: descriptors.py
src/openad_lib/models/: __init__.py  base.py
src/openad_lib/optimisation/: __init__.py  adm1_calibration.py  am2_calibration.py
src/openad_lib/preprocessing/: acod.py
src/openad_lib/utils/: __init__.py  (+5 more)
(+19 files in other folders)
