[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openad_lib"
version = "0.1.0"
description = "Open-Source Framework for Uncertainty-Aware Anaerobic Digestion Digital Twins"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Benaissa Dekhici", email = "b.dekhici@surrey.ac.uk"}
]
keywords = [
    "anaerobic-digestion",
    "biogas",
    "ADM1",
    "digital-twin",
    "uncertainty-quantification",
    "machine-learning",
    "gaussian-process"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.3",
    "scikit-learn>=0.24",
    "matplotlib>=3.4",
    "openpyxl>=3.0",
    "torch>=1.9",
    "gpytorch>=1.5",
    "optuna>=3.0",
    "plotly>=5.0",
    "do-mpc>=4.0",
    "casadi>=3.5",
    "xlrd>=2.0",
    "pytest>=7.0",
    "black",
    "isort",
    "mkdocs",
    "mkdocs-material",
]

[project.urls]
Homepage = "https://github.com/benmola/OpenAD-lib"
Documentation = "https://benmola.github.io/OpenAD-lib"
Repository = "https://github.com/benmola/OpenAD-lib"
Issues = "https://github.com/benmola/OpenAD-lib/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openad_lib = ["data/**/*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100
